test_builtin_dir/libft/ft_putchar_fd.c
/* ************************************************************************** */
/*                                                                            */
/*                                                        :::      ::::::::   */
/*   ft_putchar_fd.c                                    :+:      :+:    :+:   */
/*                                                    +:+ +:+         +:+     */
/*   By: ynakashi <ynakashi@student.42tokyo.jp>     +#+  +:+       +#+        */
/*                                                +#+#+#+#+#+   +#+           */
/*   Created: 2021/08/12 17:57:12 by ynakashi          #+#    #+#             */
/*   Updated: 2021/10/30 18:10:02 by ynakashi         ###   ########.fr       */
/*                                                                            */
/* ************************************************************************** */

#include "libft.h"

void	ft_putchar_fd(char c, int fd)
{
	write(fd, &c, sizeof(char));
}
/*
void	ft_putchar_fd(char c, int fd)
{
	char	head;
	char	tail;
	char	mask1;
	char	mask2;

	 // asciiã®ç¯„å›²å†…
	if ((unsigned char)c <= 0x7F)
	{
		write(fd, &c, sizeof(char));
	}
	 // 0x80ä»¥ä¸Šã¯2ãƒã‚¤ãƒˆæ–‡å­—ã®é ˜åŸŸ
	else
	{
		mask1 = 0b00111111;
		mask2 = 0b11000000;

		 // 2ãƒã‚¤ãƒˆã®å‰
		 // cã®ä¸Šä½2ãƒ“ãƒƒãƒˆåˆ†ã‚’å–ã‚Šå‡ºã—ã¦ã€6ãƒ“ãƒƒãƒˆå³ã«ã‚·ãƒ•ãƒˆã—ã¦ã€å…ˆé ­ã«11ã‚’ã¤ã‘ã‚‹
		head = (((unsigned char)c & mask2) >> 6) | mask2;
		 // 2ãƒã‚¤ãƒˆã®å¾Œã‚
		 // cã®ä¸‹ä½6ãƒ“ãƒƒãƒˆåˆ†ã‚’å–ã‚Šå‡ºã—ã¦ã€å…ˆé ­ã«10ã‚’ã¤ã‘ã‚‹
		tail = ((unsigned char)c & mask1) | 0b10000000;

		write(fd, &head, 1);
		write(fd, &tail, 1);
	}
}
 */
/*
#include <libc.h>
int	main(void)
{
	// putc('a', stdout);
	// putc('\n', stdout);
	ft_putchar_fd('a', STDOUT_FILENO);
	write(STDOUT_FILENO, "\n", 1);

	//1byte 'a' = 01100001(97)
	//2byte 'Â½' = 11000010(194):10111101(189)
	//3byte 'ã‚' = 11100011(227):10000001(129):10000010(130)
	//4byte 'ğ†' = 11110000(240):10010000(144):10000110(134):10010000(144) //error

	// putc(194, stdout);
	// putc(189, stdout);
	// putc('\n', stdout);

	// ft_putchar_fd((char)194, STDOUT_FILENO);
	// ft_putchar_fd((char)189, STDOUT_FILENO);
	// ft_putchar_fd('\n', STDOUT_FILENO);

	// putc(227, stdout);
	// putc(129, stdout);
	// putc(130, stdout);
	// putc('\n', stdout);

// error
	// putc('240', stdout);
	// putc('144', stdout);
	// putc('134', stdout);
	// putc('144', stdout);
	// putc('\n', stdout);

	return (0);
}
 */
